--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "main_title": "City Bingoosh",
+  "main_title": "City Bingo",
   "item_a": "Hot Springs",
   "item_b": "Hike Pirin mountains",
   "item_c": "Watch a sunset",
