--- a/src/i18n/he.json
+++ b/src/i18n/he.json
@@ -1,5 +1,5 @@
 {
-  "main_title": "סיטי בינגו",
+  "main_title": "בינגו בנסקו",
   "item_a": "מעיינות חמים",
   "item_b": "טיול בהרי פירין",
   "item_c": "לצפות בשקיעה",
