prettify did it page

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -8,5 +8,7 @@
   "item_f": "Visit a co-work",
   "item_g": "Hike to Bezbog hut",
   "item_h": "Smoothie at Coconut",
-  "item_i": "Belizmata lake"
+  "item_i": "Belizmata lake",
+  "did_it_button_next": "Save",
+  "did_it_button_back": "Cancel"
 }
