--- a/src/i18n/he.json
+++ b/src/i18n/he.json
@@ -8,5 +8,7 @@
   "item_f": "לבקר בקו-וורק",
   "item_g": "לאכול במסעדה",
   "item_h": "לעשות סקי בחורף",
-  "item_i": "לשתות קפה"
+  "item_i": "לשתות קפה",
+  "did_it_button_next": "שמירה",
+  "did_it_button_back": "ביטול"
 }
