--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -10,5 +10,7 @@
   "item_h": "Smoothie at Coconut",
   "item_i": "Belizmata lake",
   "did_it_button_next": "Save",
-  "did_it_button_back": "Cancel"
+  "did_it_button_back": "Cancel",
+  "did_it_title": "You did it!",
+  "did_it_selfie": "Add a selfie or an take a photo of your experience:"
 }
