page details back arrow

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -9,6 +9,7 @@
   "item_g": "Hike to Bezbog hut",
   "item_h": "Smoothie at Coconut",
   "item_i": "Belizmata lake",
+  "did_it_browse_file": "Browse...",
   "did_it_button_next": "Save",
   "did_it_button_back": "Cancel",
   "did_it_title": "You did it!",
