handke did-it without selfie

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -11,6 +11,7 @@
   "item_i": "Belizmata lake",
   "did_it_browse_file": "Browse...",
   "did_it_button_next": "Save",
+  "did_it_button_next_no_image": "Skip Selfie",
   "did_it_button_back": "Cancel",
   "did_it_title": "You did it!",
   "did_it_selfie": "Add a selfie or an take a photo of your experience:"
