adding information page

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "main_title": "Bansko Bingo",
   "item_a": "Hot Springs",
+  "item_a_description": "Although Bansko is unfortunately not endowed with a beach, it offers many hot springs just a short drive away. These spa places offers hot springs in a variety of temperatures, some includes also sauna and/or restaurant services.\n",
   "item_b": "Hike Pirin mountains",
   "item_c": "Watch a sunset",
   "item_d": "Picnic in Pirin forest",
