--- a/src/i18n/he.json
+++ b/src/i18n/he.json
@@ -1,6 +1,7 @@
 {
   "main_title": "בינגו בנסקו",
   "item_a": "מעיינות חמים",
+  "item_a_description": "שיאלללה מעיינות חמים איזה כיף",
   "item_b": "טיול בהרי פירין",
   "item_c": "לצפות בשקיעה",
   "item_d": "טיול ביער פירין",
