add markdown description

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "main_title": "Bansko Bingo",
   "item_a": "Hot Springs",
-  "item_a_description": "Although Bansko is unfortunately not endowed with a beach, it offers many hot springs just a short drive away. These spa places offers hot springs in a variety of temperatures, some includes also sauna and/or restaurant services.\n",
+  "item_a_description": "also sauna and/or restaurant services.[Vila Victoria](https://goo.gl/maps/T6sz4QrE2vJh2ayEA)- [Izgreva](https://goo.gl/maps/7mtcTKxNGujtuLTJ6)- [Alpha](https://g.page/ALPHA-SPA-DOBRINISHTE?share)[And here](https://maps.app.goo.gl/nofAwriS4QPyMUK1A) You can find one for a very chean p",
   "item_b": "Hike Pirin mountains",
   "item_c": "Watch a sunset",
   "item_d": "Picnic in Pirin forest",
