add all en descriptions

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,15 +1,14 @@
 {
   "main_title": "Bansko Bingo",
   "item_a": "Hot Springs",
-  "item_a_description": "also sauna and/or restaurant services.[Vila Victoria](https://goo.gl/maps/T6sz4QrE2vJh2ayEA)- [Izgreva](https://goo.gl/maps/7mtcTKxNGujtuLTJ6)- [Alpha](https://g.page/ALPHA-SPA-DOBRINISHTE?share)[And here](https://maps.app.goo.gl/nofAwriS4QPyMUK1A) You can find one for a very chean p",
-  "item_b": "Hike Pirin mountains",
-  "item_c": "Watch a sunset",
-  "item_d": "Picnic in Pirin forest",
-  "item_e": "Have a Banitza",
+  "item_b": "Pirin mountains",
+  "item_c": "Have a Banitza",
+  "item_d": "Pirin forest",
+  "item_e": "Eat at a restaurant",
   "item_f": "Visit a co-work",
-  "item_g": "Hike to Bezbog hut",
-  "item_h": "Smoothie at Coconut",
-  "item_i": "Belizmata lake",
+  "item_g": "Cafe",
+  "item_h": "A water reservoir",
+  "item_i": "Nature outside Bansko",
   "did_it_browse_file": "Browse...",
   "did_it_button_next": "Save",
   "did_it_button_next_no_image": "Skip Selfie",
