add hebrew descriptions

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "main_title": "Bansko Bingo",
   "item_a": "Hot Springs",
-  "item_b": "Pirin mountains",
+  "item_b": "Pirin nature reserve",
   "item_c": "Have a Banitza",
   "item_d": "Pirin forest",
   "item_e": "Eat at a restaurant",
