--- a/src/i18n/he.json
+++ b/src/i18n/he.json
@@ -1,13 +1,12 @@
 {
   "main_title": "בינגו בנסקו",
   "item_a": "מעיינות חמים",
-  "item_a_description": "שיאלללה מעיינות חמים איזה כיף",
-  "item_b": "טיול בהרי פירין",
-  "item_c": "לצפות בשקיעה",
+  "item_b": "שמורת הטבע פירין",
+  "item_c": "לאכול באניצה",
   "item_d": "טיול ביער פירין",
-  "item_e": "לאכול בניצה",
+  "item_e": "לאכול במסעדה",
   "item_f": "לבקר בקו-וורק",
-  "item_g": "לאכול במסעדה",
-  "item_h": "לעשות סקי בחורף",
-  "item_i": "לשתות קפה"
+  "item_g": "לשבת בבית קפה",
+  "item_h": "טיול ברגל למאגר מים",
+  "item_i": "טבע מחוץ לבנסקו"
 }
