--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -17,5 +17,6 @@
   "did_it_close": "Close",
   "did_it_back": "Back to info",
   "did_it_title": "You did it!",
-  "did_it_selfie": "Add a selfie or an take a photo of your experience:"
+  "did_it_selfie": "Add a selfie or an take a photo of your experience:",
+  "did_it_review_placeholder": "What did you think?"
 }
