--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -9,13 +9,14 @@
   "item_g": "Cafe",
   "item_h": "A water reservoir",
   "item_i": "Nature outside Bansko",
+  "tabs_info": "Information",
+  "tabs_reviews": "Reviews",
+  "tabs_did_it": "Did it!",
   "info_close": "Close",
   "info_next": "I Did it!",
   "did_it_browse_file": "Upload Photo",
-  "did_it_next": "Mark Done",
   "did_it_next_no_image": "Skip Selfie",
   "did_it_close": "Close",
-  "did_it_back": "Back to info",
   "did_it_title": "You did it!",
   "did_it_selfie": "Add a selfie or an take a photo of your experience:",
   "did_it_review_placeholder": "What did you think?"
