--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -15,9 +15,10 @@
   "info_close": "Close",
   "info_next": "I Did it!",
   "did_it_browse_file": "Upload Photo",
-  "did_it_next_no_image": "Skip Selfie",
+  "did_it_save": "Save",
   "did_it_close": "Close",
   "did_it_title": "You did it!",
   "did_it_selfie": "Add a selfie or an take a photo of your experience:",
-  "did_it_review_placeholder": "What did you think?"
+  "did_it_review_placeholder": "What did you think?",
+  "did_it_next_skip_selfie": "I prefer to skip selfie"
 }
