--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,7 @@
 {
+  "login_name": "Your Name:",
+  "login_email": "Email Address:",
+  "login_save": "Login",
   "main_title": "Bansko Bingo",
   "item_a": "Hot Springs",
   "item_b": "Pirin nature reserve",
