--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,6 +3,8 @@
   "login_email": "Email Address:",
   "login_save": "Login",
   "main_title": "Bansko Bingo",
+  "how_to_play_title": "How to Play?",
+  "how_to_play_button": "Got It",
   "item_a": "Hot Springs",
   "item_b": "Pirin nature reserve",
   "item_c": "Have a Banitza",
