checked item clickable

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -16,9 +16,8 @@
   "item_i": "Nature outside Bansko",
   "tabs_info": "Information",
   "tabs_reviews": "Reviews",
-  "tabs_did_it": "Did it!",
-  "info_close": "Close",
-  "info_next": "I Did it!",
+  "item_close": "Close",
+  "item_did_it": "I Did it!",
   "did_it_browse_file": "Upload Photo",
   "did_it_save": "Save",
   "did_it_close": "Close",
