text-align + margin

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -2,7 +2,7 @@
   "login_name": "Your Name:",
   "login_email": "Email Address:",
   "login_save": "Login",
-  "main_title": "Bansko Bingo",
+  "main_title": "Bansko",
   "how_to_play_title": "How to Play?",
   "how_to_play_button": "Got It",
   "item_a": "Hot Springs",
