--- a/src/i18n/he.json
+++ b/src/i18n/he.json
@@ -1,5 +1,5 @@
 {
-  "main_title": "בינגו בנסקו",
+  "main_title": "בנסקו",
   "item_a": "מעיינות חמים",
   "item_b": "שמורת הטבע פירין",
   "item_c": "לאכול באניצה",
