add more items to translations

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -12,8 +12,15 @@
   "item_e": "Eat at a restaurant",
   "item_f": "Visit a co-work",
   "item_g": "Cafe",
-  "item_h": "A water reservoir",
+  "item_h": "Water reservoirs",
   "item_i": "Nature outside Bansko",
+  "item_j": "Watch the sunset",
+  "item_k": "Sunday market",
+  "item_l": "Bansko Park",
+  "item_m": "Town Square shows",
+  "item_n": "Nomad-organized events",
+  "item_o": "Go up the Gondola",
+  "item_p": "Cold Plunges",
   "tabs_info": "Information",
   "tabs_reviews": "Reviews",
   "item_close": "Close",
