--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -25,6 +25,7 @@
   "tabs_reviews": "Reviews",
   "item_close": "Close",
   "item_did_it": "I Did it!",
+  "reviews_soon": "Coming soon: See everyone's photos and reviews",
   "did_it_browse_file": "Upload Photo",
   "did_it_save": "Save",
   "did_it_close": "Close",
