view your own review

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -26,6 +26,7 @@
   "item_close": "Close",
   "item_did_it": "I Did it!",
   "reviews_soon": "Coming soon: See everyone's photos and reviews",
+  "reviews_your_experience": "Your Experience",
   "did_it_browse_file": "Upload Photo",
   "did_it_save": "Save",
   "did_it_close": "Close",
