--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,4 +1,6 @@
 {
+  "logo": "City Bingo",
+  "slogan": "Traveling? Don't plan - play!",
   "login_name": "Your Name:",
   "login_email": "Email Address:",
   "login_save": "Login",
