add support us text

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,6 +1,7 @@
 {
   "logo": "City Bingo",
   "slogan": "Traveling? Don't plan - play!",
+  "drawer_title": "Support Us",
   "login_name": "Your Name:",
   "login_email": "Email Address:",
   "login_save": "Login",
