place list cosmetics

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -36,6 +36,8 @@
   "did_it_title": "What did you think?",
   "did_it_selfie": "Snap a photo of your experience:",
   "did_it_review_placeholder": "Anything you'd like to add?",
+  "info_places_title": "Notable Places",
+  "info_click_place": "Clicking a place will open Google Maps. You can always return to City Bingo on your browser.",
   "bottom_nav_home": "Home",
   "bottom_nav_about": "About",
   "bottom_nav_feedback": "Feedback"
