--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,7 +5,7 @@
   "login_name_helper_text": "We will use your name to thank you later",
   "login_email": "Email address:",
   "login_save": "Login",
-  "main_title": "🇧🇬 Bansko",
+  "main_title": "Bansko 🇧🇬",
   "how_to_play_title": "How to Play?",
   "how_to_play_button": "Got It",
   "item_a": "Hot Springs",
@@ -30,12 +30,13 @@
   "item_did_it": "I Did it!",
   "reviews_soon": "Coming soon: See everyone's photos and reviews",
   "reviews_your_experience": "Your Experience",
-  "did_it_browse_file": "Upload Photo",
-  "did_it_save": "Save",
-  "did_it_close": "Close",
-  "did_it_title": "What did you think?",
+  "did_it_browse_file": "Add Photo",
+  "did_it_save": "Done",
+  "did_it_title": "How would you rate it?",
   "did_it_selfie": "Snap a photo of your experience:",
-  "did_it_review_placeholder": "Anything you'd like to add?",
+  "did_it_review_placeholder": "Anything else?",
+  "crop_title": "Crop your photo",
+  "crop_button": "Save",
   "info_places_title": "Notable Places",
   "info_click_place": "Clicking a place will open Google Maps. You can always return to City Bingo on your browser.",
   "bottom_nav_home": "Home",
