place help dialog

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -7,7 +7,7 @@
   "login_save": "Login",
   "main_title": "Bansko 🇧🇬",
   "how_to_play_title": "How to Play?",
-  "how_to_play_button": "Got It",
+  "help_button": "Got It",
   "item_a": "Hot Springs",
   "item_b": "Pirin nature reserve",
   "item_c": "Have a Banitza",
