--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -38,7 +38,7 @@
   "crop_title": "Crop your photo",
   "crop_button": "Save",
   "info_places_title": "Notable Places",
-  "info_click_place": "Clicking a place will open Google Maps. You can always return to City Bingo on your browser.",
+  "info_click_place": "Clicking a place will take you away from City Bingo. You can go back to it later in your browser tabs.",
   "bottom_nav_home": "Home",
   "bottom_nav_about": "About",
   "bottom_nav_feedback": "Feedback"
