done card image list

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -41,5 +41,6 @@
   "info_click_place": "Clicking a place will take you away from City Bingo. You can go back to it later in your browser tabs.",
   "menu_page_home": "Home",
   "menu_page_about": "About",
-  "menu_page_feedback": "Feedback"
+  "menu_page_feedback": "Feedback",
+  "done_items_title": "Look what you've done 👏"
 }
