--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,7 +5,8 @@
   "login_name_helper_text": "We will use your name to thank you later",
   "login_email": "Email address:",
   "login_save": "Login",
-  "main_title": "Bansko 🇧🇬",
+  "main_title": "Bansko",
+  "main_subtitle": "Bulgaria",
   "how_to_play_title": "How to Play?",
   "help_button": "Got It",
   "item_a": "Hot Springs",
