city bingo alert version

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,30 +1,54 @@
 {
-  "logo": "City Bingo",
-  "slogan": "Traveling? Don't plan - play!",
-  "login_name": "Your full name:",
+  "logo": "Alert Bingo",
+  "slogan": "Stay safe; seek shelter; play bingo",
+  "login_name": "Your name:",
   "login_name_helper_text": "We will use your name to thank you later",
   "login_email": "Email address:",
   "login_save": "Login",
-  "main_title": "Bansko",
-  "main_subtitle": "Bulgaria",
+  "main_title": "Alert!",
+  "main_subtitle": "where are you now?",
   "how_to_play_title": "How to Play?",
   "help_button": "Got It",
-  "item_a": "Hot Springs",
-  "item_b": "Pirin nature reserve",
-  "item_c": "Have a Banitza",
-  "item_d": "Pirin forest",
-  "item_e": "Eat at a restaurant",
-  "item_f": "Visit a co-work",
-  "item_g": "Cafe",
-  "item_h": "Water reservoirs",
-  "item_i": "Nature outside Bansko",
-  "item_j": "Watch the sunset",
-  "item_k": "Sunday market",
-  "item_l": "Bansko Park",
-  "item_m": "Town Square shows",
-  "item_n": "Nomad-organized events",
-  "item_o": "Go up the Gondola",
-  "item_p": "Cold Plunges",
+  "bansko": {
+    "logo": "City Bingo",
+    "slogan": "Traveling? Don't plan - play!",
+    "main_title": "Bansko", 
+    "old_main_subtitle": "Bulgaria",
+    "item_a": "Hot Springs",
+    "item_b": "Pirin nature reserve",
+    "item_c": "Have a Banitza",
+    "item_d": "Pirin forest",
+    "item_e": "Eat at a restaurant",
+    "item_f": "Visit a co-work",
+    "item_g": "Cafe",
+    "item_h": "Water reservoirs",
+    "item_i": "Nature outside Bansko",
+    "item_j": "Watch the sunset",
+    "item_k": "Sunday market",
+    "item_l": "Bansko Park",
+    "item_m": "Town Square shows",
+    "item_n": "Nomad-organized events",
+    "item_o": "Go up the Gondola",
+    "item_p": "Cold Plunges",
+    "did_it_selfie": "Snap a photo of your experience:",
+    "done_items_title": "Look what you've done 👏"
+  },
+  "item_a": "In the shower",
+  "item_b": "On the street",
+  "item_c": "In the car",
+  "item_d": "At a friend's place",
+  "item_e": "Home alone",
+  "item_f": "At your parents'",
+  "item_g": "In the toilet",
+  "item_h": "Sleeping",
+  "item_i": "Having a meal",
+  "item_j": "On public transport",
+  "item_k": "On a date",
+  "item_l": "Ignoring the alert",
+  "item_m": "Walking the dog",
+  "item_n": "Already in the shelter",
+  "item_o": "In a meeting",
+  "item_p": "Having sex",
   "tabs_info": "Information",
   "tabs_reviews": "Reviews",
   "item_close": "Close",
@@ -34,7 +58,7 @@
   "did_it_browse_file": "Add Photo",
   "did_it_save": "Done",
   "did_it_title": "How would you rate it?",
-  "did_it_selfie": "Snap a photo of your experience:",
+  "did_it_selfie": "Stay safe and seek shelter. Then, share a selfie of where you are:",
   "did_it_review_placeholder": "Anything else?",
   "crop_title": "Crop your photo",
   "crop_button": "Save",
@@ -43,8 +67,8 @@
   "menu_page_home": "Home",
   "menu_page_about": "About",
   "menu_page_feedback": "Feedback",
-  "done_items_title": "Look what you've done 👏",
-  "win_dialog_title": "Yay, you win!",
-  "win_dialog_text": "Great job, you won the bingo! The fun isn't over - you can continue to play."
+  "done_items_title": "Memories of crazy times",
+  "win_dialog_title": "You won this bingo game.",
+  "win_dialog_text": "You've found shelter in the weirdest circumstances. Until quiter times reach us, you can continue to play."
 
 }
