--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,14 +1,30 @@
 {
-  "logo": "Alert Bingo",
+  "logo": "Missile Bingo",
   "slogan": "Stay safe; seek shelter; play bingo",
   "login_name": "Your name:",
   "login_name_helper_text": "We will use your name to thank you later",
   "login_email": "Email address:",
   "login_save": "Login",
-  "main_title": "Alert!",
-  "main_subtitle": "where are you now?",
+  "main_title": "Missile Alerts",
+  "main_subtitle": "and where they found you",
   "how_to_play_title": "How to Play?",
   "help_button": "Got It",
+  "item_a": "In the shower",
+  "item_b": "On the street",
+  "item_c": "In the car",
+  "item_d": "At a friend's place",
+  "item_e": "Home alone",
+  "item_f": "At your parents'",
+  "item_g": "In the toilet",
+  "item_h": "Sleeping",
+  "item_i": "Having a meal",
+  "item_j": "On public transport",
+  "item_k": "On a date",
+  "item_l": "On the phone",
+  "item_m": "Walking the dog",
+  "item_n": "Already in the shelter",
+  "item_o": "In a meeting",
+  "item_p": "Having sex",
   "bansko": {
     "logo": "City Bingo",
     "slogan": "Traveling? Don't plan - play!",
@@ -33,22 +49,22 @@
     "did_it_selfie": "Snap a photo of your experience:",
     "done_items_title": "Look what you've done 👏"
   },
-  "item_a": "In the shower",
-  "item_b": "On the street",
-  "item_c": "In the car",
-  "item_d": "At a friend's place",
-  "item_e": "Home alone",
-  "item_f": "At your parents'",
-  "item_g": "In the toilet",
-  "item_h": "Sleeping",
-  "item_i": "Having a meal",
-  "item_j": "On public transport",
-  "item_k": "On a date",
-  "item_l": "Ignoring the alert",
-  "item_m": "Walking the dog",
-  "item_n": "Already in the shelter",
-  "item_o": "In a meeting",
-  "item_p": "Having sex",
+  "item_a_did_it": "Put on a towel and be carefull not to slip running.",
+  "item_b_did_it": "On the street",
+  "item_c_did_it": "In the car",
+  "item_d_did_it": "At a friend's place",
+  "item_e_did_it": "Home alone",
+  "item_f_did_it": "At your parents'",
+  "item_g_did_it": "In the toilet",
+  "item_h_did_it": "Sleeping",
+  "item_i_did_it": "Having a meal",
+  "item_j_did_it": "On public transport",
+  "item_k_did_it": "On a date",
+  "item_l_did_it": "On the phone",
+  "item_m_did_it": "Walking the dog",
+  "item_n_did_it": "Already in the shelter",
+  "item_o_did_it": "In a meeting",
+  "item_p_did_it": "Having sex", 
   "tabs_info": "Information",
   "tabs_reviews": "Reviews",
   "item_close": "Close",
@@ -69,6 +85,6 @@
   "menu_page_feedback": "Feedback",
   "done_items_title": "Memories of crazy times",
   "win_dialog_title": "You won this bingo game.",
-  "win_dialog_text": "You've found shelter in the weirdest circumstances. Until quiter times reach us, you can continue to play."
+  "win_dialog_text": "Well, missiles have definitely caught you during the weirdest circumstances... You win the bingo! And until quieter times reach us, you can go on playing."
 
 }
